<resources>
    <string name="app_name">Reproductor de Música</string>
    <string name="select_audio">Selecciona un audio</string>
    <string name="btn_select">Seleccionar</string>
    <string name="audio_name">Nombre del audio</string>
    <string name="btn_play">Reproducir</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_stop">Detener</string>
    <string name="btn_back">Volver</string>
    <string name="content_desc">A disfrutar!</string>
</resources>